--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "torch>=2.8.0",
+    "wandb>=0.21.1",
+]
 
 [tool.basedpyright]
 typeCheckingMode = "standard"
